# kodiak

./: .dockerignore  .gitignore  .kodiak.toml  .pylintrc  1D461C4A-022B-411F-9D54-321BF2232D06.txt  24A15EB8-67CD-401F-A86A-E718FD3D5CF6.txt  97821A52-407D-423F-81E6-0F456FBDB591.txt  CHANGELOG.md  Dockerfile  README.md  codecov.yml  docker-compose.yml  kodiak.code-workspace  mypy.ini  pyproject.toml  tox.ini
bot/: .coveragerc  .dockerignore  .isort.cfg  .pylintrc  Dockerfile  README.md  example.env  mypy.ini  pyproject.toml  supervisord.conf  tox.ini
bot/kodiak/: app_config.py  assertions.py  cli.py  config.py  conftest.py  custom_log.py  dependencies.py  errors.py  evaluation.py  event_handlers.py  http.py  logging.py  main.py  messages.py  pull_request.py  queries.py  queue.py  redis.py  redis_client.py  refresh_pull_requests.py  schemas.py  test_config.py  test_config_utils.py  test_dependencies.py  test_errors.py  test_evaluation.py  test_event_handlers.py  test_events.py  test_logging.py  test_main.py  test_pull_request.py  test_queries.py  test_queue.py  test_text.py  test_utils.py  text.py  throttle.py
bot/kodiak/entrypoints/: ingest.py  worker.py
bot/kodiak/events/: __init__.py  check_run.py  issue.py  pull_request.py  pull_request_review.py  pull_request_review_thread.py  push.py  status.py
bot/kodiak/queries/: __init__.py  commits.py
bot/kodiak/tests/: fixtures.py  test_fixtures.py  test_messages.py
bot/kodiak/tests/dependencies/: test_dependabot.py  test_dependencies.py  test_renovate.py
bot/kodiak/tests/evaluation/: test_automerge_dependencies.py  test_branch_protection.py  test_check_runs.py  test_merge_blocked.py  (+4 more)
bot/pytest_plugin/: plugin.py
bot/s/: build  dev  dev-ingest  dev-workers  lint  test  typecheck  upload-code-cov
bot/typings/: jwt.pyi  markdown_html_finder.pyi  markupsafe.pyi  rure.pyi  zstandard.pyi
bot/typings/asyncio_redis/: __init__.pyi  connection.pyi  encoders.pyi  exceptions.pyi  pool.pyi  protocol.pyi  replies.pyi
bot/typings/pythonjsonlogger/: jsonlogger.pyi
bot/typings/requests_async/: __init__.pyi  adapters.pyi  api.pyi  exceptions.pyi  models.pyi  session.pyi  status_codes.pyi
bot/typings/rure/: __init__.pyi  exceptions.pyi
bot/typings/structlog/: __init__.pyi  _base.pyi  _config.pyi  _generic.pyi  processors.pyi  stdlib.pyi
bot/typings/uvicorn/: __init__.pyi  main.pyi
web_api/: .isort.cfg  .pylintrc  Dockerfile  README.md  example.env  manage.py  mypy.ini  pyproject.toml  tox.ini
web_api/core/: analytics_aggregator.py  asgi.py  auth.py  conftest.py  event_ingestion.py  event_ingestor.py  exceptions.py  middleware.py  models.py  settings.py  test_account.py  test_analytics_aggregator.py  test_middleware.py  test_pull_request_activity.py  test_stripe_customer_info.py  test_stripe_views.py  test_user.py  test_user_pull_request_activity.py  test_views.py  testutils.py  urls.py  user_activity_aggregator.py  users.py  utils.py  views.py  wsgi.py
web_api/core/migrations/: 0001_initial.py  0002_githubevent.py  0003_auto_20200214_0306.py  0003_auto_20200215_1733.py  0004_auto_20200215_2015.py  0004_installationmembership.py  0005_auto_20200215_2156.py  0006_remove_account_payload.py  0007_auto_20200216_1711.py  0007_auto_20200217_0345.py  0008_payload_installation_id_idx.py  0008_uuid_extension.py  0009_auto_20200217_0340.py  0009_pullrequestactivityprogress.py  0010_auto_20200220_0116.py  0011_accountmembership_role.py  0012_auto_20200308_2254.py  0013_auto_20200310_0412.py  0014_auto_20200315_1510.py  0014_auto_20200323_0159.py  0015_account_billing_email.py  0015_remove_stripecustomerinformation_customer_delinquent.py  0016_auto_20200405_1511.py  0017_account_trial_email.py  0018_auto_20200502_1849.py  0019_account_stripe_plan_id.py  0019_auto_20200610_0006.py  0020_auto_20200613_2012.py  0020_stripecustomerinformation_customer_currency.py  0021_auto_20200610_0001.py  0021_auto_20200617_1246.py  0022_remove_account_stripe_plan_id.py  0023_account_limit_billing_access_to_owners.py  0024_auto_20200726_0316.py  0024_user_text.py  0025_account_contact_emails.py  0025_auto_20200901_0354.py  0025_auto_20200902_0052.py
web_api/core/views/: __init__.py  authentication.py  billing.py
web_api/s/: build  dev  flask  fmt  lint  squawk.py  test
web_api/typings/: dj_database_url.pyi  responses.pyi  zstandard.pyi
web_api/web_api/: app.py  asgi.py  auth.py  billing.py  config.py  conftest.py  event_ingestion.py  http.py  merge_queues.py  middleware.py  models.py  patches.py  settings.py  test_account.py  test_analytics_aggregator.py  test_billing.py  test_merge_queues.py  test_middleware.py  test_pull_request_activity.py  test_stripe_customer_info.py  test_stripe_views.py  test_user.py  test_user_pull_request_activity.py  test_views.py  testutils.py  urls.py  user_activity_aggregator.py  views.py  wsgi.py
web_api/web_api/migrations/: 0001_initial.py  0002_githubevent.py  0003_auto_20200215_1733.py  0004_auto_20200215_2015.py  0005_auto_20200215_2156.py  0006_remove_account_payload.py  0007_auto_20200217_0345.py  0008_payload_installation_id_idx.py  0009_pullrequestactivityprogress.py  0010_auto_20200220_0116.py  0011_accountmembership_role.py  0012_auto_20200308_2254.py  0013_auto_20200310_0412.py  0014_auto_20200323_0159.py  0015_remove_stripecustomerinformation_customer_delinquent.py  0016_auto_20200405_1511.py  0017_account_trial_email.py  0018_auto_20200502_1849.py  0019_auto_20200610_0006.py  0020_auto_20200613_2012.py  0021_auto_20200617_1246.py  0022_remove_account_stripe_plan_id.py  0023_account_limit_billing_access_to_owners.py  0024_auto_20200726_0316.py  0025_auto_20200902_0052.py  0026_auto_20201019_0110.py  0026_auto_20201019_0117.py  0026_auto_20201019_0257.py  0026_auto_20201024_2319.py  0026_auto_20220322_0036.py  0026_remove_stripecustomerinformation_customer_currency.py  0027_auto_20201014_0130.py  0027_auto_20201024_2320.py  0027_set_upcoming_invoice.py  0028_auto_20201014_0259.py  0028_set_upcoming_invoice.py  0029_auto_20201018_0208.py  env.py
web_api/web_api/tests/: conftest.py  test_app.py
(+298 files in other folders)
