[tool.poetry]
name = "kodiak"
version = "0.1.0"
description = ""
authors = ["Christopher Dignam <chris@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.7.0"
fastapi = {version = "^0.17.0",extras = ["all"]}
PyGithub = "^1.43"
requests-async = "^0.4.1"
jsonpath-rw = "^1.4"
PyJWT = "^1.7"
cryptography = "^2.6"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
black = "^19.3b0"
mypy = "^0.701.0"
ipdb = "^0.12.0"
toml = "^0.10.0"
pytest-asyncio = "^0.10.0"
pytest-mock = "^1.10"
rope = "^0.14.0"
typing_extensions = "^3.7"
vcrpy = {path = "../vcrpy/"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
