[tool.poetry]
name = "kodiak"
version = "0.1.0"
description = ""
authors = ["Christopher Dignam <chris@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.15.0"
toml = "^0.10.0"
PyJWT = "^1.7"
cryptography = "^3.4.6"
structlog = "^19.1"
colorama = "^0.4.1"
databases = "0.3.2"
# bzpopmin and bzpopmax support. connection pool is built concurrently. TLS support.
asyncio_redis = {git = "https://github.com/chdsbd/asyncio-redis.git", branch="master"}
inflection = "0.5.1"
markdown-html-finder = "^0.2.3"
markupsafe = "^1.1"
sentry-sdk = "^1.5.12"
requests = "^2.22"
# same as `rure` on pypi, but with arm64 builds for macos.
kodiak_rure = "^0.2.2"
zstandard = "^0.13.0"
httpx = "^0.18.1"
httpcore = "0.13.2"
pydantic = "^1.9.1"
starlette = "^0.20.4"

[tool.poetry.scripts]
kodiak = 'kodiak.cli:cli'

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.960"
ipdb = "^0.13.9"
pytest-mock = "3.3.1"
typing_extensions = "^3.7"
pytest-cov = "^2.10"
types-requests = "^2.28.0"
types-toml = "^0.10.7"
pytest-asyncio = "0.20.1"
pytest = "^7.2.0"
ruff = "^0.0.209"

[tool.poetry.plugins."pytest11"]
"pytest_plugin" = "pytest_plugin.plugin"

[tool.ruff]
select = [
    "E",
    "F",
    "TID251",
    "TID252",
    "I001",
    "T20",
    "C4",
    "UP",
    "N",
    "BLE",
    "B",
    "RET",
    "SIM",
    "ARG",
    "DTZ",
    "ERA",
    "RUF",
]
src = ["kodiak", "typings"]
ignore = [
    "E501", # line length is handled by black
    "ARG001", # pytest fixtures mess with this
    "ARG002", # sometimes parent classes require params
    "N806", # django migrations violate this a lot
    "B008", # type.Argument violates this
    "N815", # we mix and match casing in serializers
    "ARG005", # monkey patching false positive with *args, and **kwargs
    "N805", # false positive with pydantic
    "N802", # DRF serializers mess with this
    "RET505", # if, elif, else are fine with returns
    "RET507", # if, elif, else with continue is also fine
    "RET508", # if, elif, else with break is also fine
]
unfixable = [
    "UP018" # see: https://github.com/charliermarsh/ruff/issues/1615
]
update-check = false
target-version = "py37"

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.ruff.isort]
known-third-party = ["redis", "asyncio_redis", "structlog", "rure", "uvicorn"]
known-first-party = ["kodiak"]

[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
[tool.ruff.flake8-tidy-imports.banned-api]
"httpx".msg = "Use kodiak.http"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  # all warnings that are not ignored should raise an error
  "error",
  # pytest wants to remove the `message` kwarg to pytest.raises, but there isn't
  # an alternative at the moment.
  # https://github.com/pytest-dev/pytest/issues/3974
  "ignore::pytest.PytestDeprecationWarning",
  "ignore::DeprecationWarning:asyncio_redis"
]
addopts = "--pdbcls IPython.terminal.debugger:TerminalPdb"

[tool.mypy]
mypy_path = "./typings"

show_column_numbers = true
show_error_codes = true

# nice to allow using types for docs even when they are Any
disallow_any_unimported=false
disallow_any_expr=false
disallow_any_decorated=false
disallow_any_explicit=false
disallow_any_generics=true
disallow_subclassing_any=true

disallow_untyped_calls=true
disallow_untyped_defs=true
disallow_incomplete_defs=true
check_untyped_defs=true
disallow_untyped_decorators=true

no_implicit_optional=true
strict_optional=true

warn_redundant_casts=true
warn_unused_ignores=true
warn_no_return=true
warn_return_any=true
# doesn't consider how methods can change the value of properties
warn_unreachable=false

strict_equality=true

ignore_missing_imports=false

# enable pydantic mypy plugin.
plugins = [
  "pydantic.mypy"
]

# https://pydantic-docs.helpmanual.io/mypy_plugin/#plugin-settings
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry>=1.1.8", "setuptools"]
build-backend = "poetry.masonry.api"
