[tool.poetry]
name = "web_api"
version = "0.1.0"
description = ""
authors = ["Christopher Dignam <chris@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"
requests = "^2.22"
yarl = "^1.4"
python-dotenv = "^0.10.5"
psycopg2 = "^2.8"
gunicorn = "^20.0"
django = "^3.0"
dj-database-url = "^0.5.0"
redis = "^3.4"
zstandard = "^0.13.0"
sentry-sdk = "^0.14.1"
stripe = "2.46.0"
email-validator = "^1.1"
pywatchman = "^1.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "6.0.1"
mypy = "^0.960"
isort = "^4.3"
black = "^19.10b0"
flake8 = "3.8.4"
ipython = "^7.12"
mypy_extensions = "^0.4.3"
typing_extensions = "^3.7"
pytest-env = "^0.6.2"
pytest-mock = "3.3.1"
ipdb = "^0.12.3"
pytest-cov = "^2.10"
django-types = "0.3.0"
flake8-pie = "0.7.1"
types-redis = "^0.1.10"
types-dj-database-url = "^0.5.0"
responses = "^0.21.0"
pytest-django = "^4.5.2"
types-stripe = "^2.59.10"
pydantic = "^1.9.1"
types-requests = "^2.27.30"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
